...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/flags_new_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flags_new_task" />
        <CheckBox
            android:id="@+id/flags_single_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flags_single_top" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/flags_clear_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flags_clear_top" />
        <CheckBox
            android:id="@+id/flags_clear_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flags_clear_task" />
    </LinearLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
...
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="10dp"
            android:orientation="vertical">
            <Button
                android:id="@+id/standard1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/activity_standard1" />
            <Button
                android:id="@+id/standard2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/activity_standard2" />
            <Button
                android:id="@+id/standard3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/activity_standard3" />
            <Button
                android:id="@+id/single_top1"
...
